# cicadas

./: .cicadas  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  HOW-TO.md  LICENSE  README.md  agents.md  install.sh  pyproject.toml  release-notes.md  roadmap-next.md
.agents/skills/: cicadas
.cicadas/: config.json  index.json  registry.json
.cicadas/active/abort-command/: tweaklet.md
.cicadas/active/agent-guardrails/: tweaklet.md
.cicadas/active/build-on-ai-aware/: approach.md  tasks.md
.cicadas/active/clarify-standardization/: tokens.json
.cicadas/active/code-review/: approach.md  tech-design.md
.cicadas/active/context-injection/: tokens.json
.cicadas/active/emergence-consistency-check/: tweaklet.md
.cicadas/active/installer/: prd.md  tasks.md
.cicadas/active/lifecycle-prs/: prd.md
.cicadas/active/pr-tasks-in-tasks-md/: tweaklet.md
.cicadas/active/process-preview/: tweaklet.md
.cicadas/active/rovodev-support/: tweaklet.md
.cicadas/active/skill-builder/: tasks.md
.cicadas/active/skill-tuning/: skill-improvements.md
.cicadas/active/token-usage-logging/: tasks.md
.cicadas/active/unit-tests/: buglet.md
.cicadas/active/visual-requirements/: approach.md  lifecycle.json  prd.md  tech-design.md  tokens.json  ux.md
.cicadas/active/worktrees-parallel-execution/: prd.md  tech-design.md  ux.md
.cicadas/archive/20260228-040748-bugs-and-tweaks/: approach.md  prd.md  tasks.md  tech-design.md  ux.md
.cicadas/archive/20260228-051500-project-history/: tweaklet.md
.cicadas/archive/20260228-052456-branch-active-dir/: buglet.md
.cicadas/archive/20260301-041022-archive-branch-cleanup/: buglet.md
.cicadas/archive/20260301-224459-installer/: approach.md  tech-design.md  ux.md
.cicadas/archive/20260302-035921-installer-default-path/: tweaklet.md
.cicadas/archive/20260303-033148-lifecycle-prs/: approach.md  tasks.md  tech-design.md  ux.md
.cicadas/archive/20260303-034758-bug-fix/: buglet.md
.cicadas/archive/20260303-050155-code-review/: prd.md  tasks.md
.cicadas/archive/20260308-034728-worktrees-parallel-execution/: approach.md  lifecycle.json  tasks.md
.cicadas/archive/20260308-042221-pr-lifecycle-enforcement/: tweaklet.md
.cicadas/archive/20260308-053834-token-usage-logging/: approach.md  lifecycle.json  prd.md  tech-design.md  tokens.json
.cicadas/archive/20260308-055106-review-merge-gate/: tokens.json  tweaklet.md
.cicadas/archive/20260308-063111-context-injection/: tweaklet.md
.cicadas/archive/20260313-200453-visual-requirements/: review.md  tasks.md
.cicadas/archive/20260313-212753-clarify-standardization/: approach.md  buglet.md  lifecycle.json
.cicadas/archive/20260314-183358-skill-tuning/: lifecycle.json  tokens.json  tweaklet.md
.cicadas/archive/20260315-195610-build-on-ai-aware/: emergence-config.json  lifecycle.json  prd.md  reqt-template-sample.md  reqt-template.md  tech-design.md  tokens.json  ux.md
.cicadas/canon/: history.html  product-overview.md  summary.md  tech-overview.md
.github/workflows/: ci.yml  publish.yml
docs/: agentic_coding_research.md  bmad-vs-cicadas.md  cicadas-method-general-02.md  cicadas-method-general.md  cicadas-method.md  dry-run.md  publishing.md  roadmap-next.md  sdd-comparison.md
scripts/chorus/: CHORUS.md  SKILL.md  implementation.md
scripts/chorus/emergence/: ux.md  (+5 more)
src/cicadas/: README.md  SKILL.md  __init__.py  implementation.md  skill.md
tests/: __init__.py  _agent-readme-tests.md  base.py  conftest.py  repro_issue_1.py  test_abort.py  test_archive_status.py  test_branch.py  test_check.py  test_create_lifecycle.py  test_emergence_clarify.py  test_history.py  test_init.py  test_kickoff.py  test_nested_cicadas_git.py  test_open_pr.py  test_orchestration.py  test_prune.py  test_register_existing.py  test_review.py  test_signalboard.py  test_skill_publish.py  test_synthesize.py  test_tokens.py  test_update_index.py  test_utils.py  test_validate_skill.py  test_wiki_nav.py
(+84 files in other folders)
